<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sebacia</string>
    <string name="common_next">Next</string>
    <string name="common_prev">Previous</string>
    <string name="common_back">Back</string>
    <string name="common_ok">OK</string>
    <string name="common_doctor">Find Doctor</string>
    <string name="common_recommendation">Details</string>
    <string name="common_0">0</string>
    <string name="common_1">1</string>
    <string name="common_2">2</string>
    <string name="common_3">3</string>
    <string name="common_4">4</string>
    <string name="common_5">5</string>
    <string name="common_6">6</string>
    <string name="common_7">7</string>
    <string name="common_8">8</string>
    <string name="common_9">9</string>
    <string name="common_acne_lvl">Grade</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_page_about">About</string>
    <string name="title_activity_privacy">Privacy Statement</string>
    <string name="title_activity_history">Progress</string>
    <string name="title_activity_find_doctor">Find a Doctor</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_survey">Survey</string>
    <string name="title_activity_recommendation">Details</string>

    <string name="main_btn_cam">Camera</string>
    <string name="main_btn_prog">Progress</string>
    <string name="main_btn_abt">About</string>
    <string name="main_itm_priv">Privacy Statement</string>
    <string name="main_itm_abt">About</string>

    <string name="page_about_title_app">About SEBACIA APP</string>
    <string name="page_about_title_company">About SEBACIA, Inc.</string>
    <string name="page_about_content_app">SEBACIA APP is a medical application that allows you to determine acne severity on your own without consulting a doctor. Doing so allows you to get in touch with medical professionals who will be willing to treat your particular severity of acne. You can use this application to track you acne over time. If you decide to consult a professional, you can use this app to help you locate one nearby. Being a medical application, you are also protected under HIPAA and any other medical laws that pertain to the country that you live in. In order to use the application, we ask that you waive these rights in order to track your acne treatment successfully.</string>
    <string name="page_about_content_company">Sebacia, Inc. is a clinical-stage private medical device company dedicated to creating new light-based therapies for the treatment of dermatological conditions. Founded as part of The Innovation Factory, SEBACIA seeks to provide an alternative to the topical and systemic drugs currently available for the treatment of acne.</string>

    <string name="diagnosis_options_autoclassify">Auto-Diagnosis</string>
    <string name="diagnosis_options_survey">Survey</string>

    <string name="survey_tutorial_instructions">This is a survey to help you diagnose your acne. You will be shown a series of pictures of different acne grades. If your acne is less severe than the acne presented in the picture, click your selfie. If it is more severe, then click the comparison picture.</string>
    <string name="survey_tutorial_take">Take Survey</string>
    <string name="survey_results_explanation">The survey has diagnosed your acne as:</string>

    <string name="recommendation_recommendation">Based on your history of acne we recommend blah blah blah.</string>

    <string name="privacy_disagree">Close Application</string>
    <string name="privacy_agree">Agree</string>
    
    <string name="privacy_statement_title">HIPAA Privacy Authorization Form</string>

    <string name="privacy_statement">HIPAA Privacy Authorization Form\n**Authorization for Use or Disclosure of Protected Health Information(Required by the Health Insurance Portability and Accountability Act, 45 C.F.R.Parts 160 and 164)**\nI authorize Sebacia to use and disclose the protected health information described below.\nThis authorization for release of information covers the period of healthcare from: all past, present, and future periods or until treatment ends.\n **3.Extent of Authorization**\nI authorize the release of my health record with Sebacia (including treatment photos, treatment data).\n 4. This medical information may be used by the person I authorize to receive this information for medical treatment or consultation, billing or claims payment, or other purposes as I may direct.\n5. This authorization shall be inforce and effect until treatment ends, at which time this authorization expires.\n6. I understand that I have the right to revoke this authorization, in writing,\n at any time. I understand that a revocation is not effective to the extent that anyperson or entity has already acted in reliance on my authorization or if my authorization was obtained as a condition of obtaining insurance coverage and theinsurer has a legal right to contest a claim.\n7. I understand that my treatment, payment, enrollment, or eligibility for benefits will not be conditioned on whether I sign this authorization.\n8. I understand that information used or disclosed pursuant to this authorization may be disclosed by the recipient and may no longer be protected by federal or state law.\n By choosing accept you agree to all terms listed in the Privacy Statement.</string>

    <string name="hist_view_img">History of previous pictures</string>

    <string name="camera_take_picture">Take Picture</string>
    <string name="camera_diagnose">Diagnose Acne</string>

    <string name="finddoc_title_string">Seeking treatment for</string>
    <string name="finddoc_level">Acne Grade: </string>
    <string name="survey_img_compare_dsc">compared_image</string>
    <string name="survey_img_selfie_dsc">selfie_image</string>

    <string name="detail_acne_0">Clear</string>
    <string name="description_acne_0">Residual discoloration and erythema may be present</string>
    <string name="detail_acne_1">Almost Clear</string>
    <string name="description_acne_1">A few papules may be present (may be residual discoloration and erythema)</string>
    <string name="detail_acne_2">Mild</string>
    <string name="description_acne_2">Some inflammatory lesions (papules/pustules only; no nodular lesions)</string>
    <string name="detail_acne_3">Moderate</string>
    <string name="description_acne_3">Inflammatory lesions are more apparent, many papules/pustules; no more than one small nodular lesion</string>
    <string name="detail_acne_4">Moderately Severe</string>
    <string name="description_acne_4">Highly inflammatory lesions predominate, numerous papules/pustules; may have up to 2 nodular lesions</string>
    <string name="detail_acne_5">Severe</string>
    <string name="description_acne_5">Abundant significant inflammatory acne with scarring potential; more than 2 nodular lesions</string>

    <string name="camera_tutorial">Make sure you are in an area with good lighting. Frame your face within the outline for best results.</string>
    <string name="recommendation_img_history_desc">Image representing the acne level</string>
    <string name="title_activity_survey_questions">SurveyQuestionsActivity</string>
    <string name="survey_question_one">Have you every been prescribed medication for treatment?</string>
    <string name="survey_question_two">Does your acne effect your daily life?</string>
    <string name="survey_question_three">How long have you had acne?</string>
    <string name="sumbit">Submit</string>
    <string name="q_survey_notification">Please fill our this brief questionare to send to the doctor</string>


</resources>
