<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/gold3"
    tools:context="com.derma.sebacia.RecommendationActivity"
    android:orientation="horizontal">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recommendation_img_history"
            android:src="@drawable/key0"
            android:layout_weight="0.9" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/recommendation_recommendation"
            android:id="@+id/recommendation_txt_rec"
            android:textColor="@color/black" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_find_doctor"
            android:id="@+id/recommendation_btn_finddoc"
            android:layout_below="@+id/recommendation_txt_rec"
            android:background="@color/black"
            android:textColor="@color/gold1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_prog"
            android:id="@+id/recommendation_btn_prog"
            android:layout_below="@+id/recommendation_btn_finddoc"
            android:background="@color/black"
            android:textColor="@color/gold1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

    </RelativeLayout>
</LinearLayout>
